fix(VNavigationDrawer): reduce absolute positioning z-index

--- a/packages/vuetify/src/components/VNavigationDrawer/VNavigationDrawer.sass
+++ b/packages/vuetify/src/components/VNavigationDrawer/VNavigationDrawer.sass
@@ -76,7 +76,9 @@
     right: auto
     left: 0
 
-.v-navigation-drawer--absolute,
+.v-navigation-drawer--absolute
+  z-index: 1
+
 .v-navigation-drawer--fixed
   z-index: 6
 
